BF page overhaul

--- a/footer.html
+++ b/footer.html
@@ -2,60 +2,45 @@
 
 
 
-  <!-- Footer Section Begins -->
+      <!-- Footer Section Begins -->
 
 
-  <div class="container" style="margin-right: 10px; margin-left: 10px; width:max-content;"></div>
-  <!-- Content Main Section Begins -->
+      <div class="container" style="margin-right: 10px; margin-left: 10px; width:max-content;"></div>
+      <!-- Content Main Section Begins -->
 
-  <div class="content-main">
 
-    <div class="justify-center">
-      <p style="color: #7ddad0; font-weight: bold;"><a style="color: black; font-weight: normal;"
-          href="mailto:info@legaldesignsummit.com"> info@legaldesignsummit</a> | <a
-          style="color: black;  font-weight: normal;" href="https://forms.gle/yFSxNdMBgnmbwZdWA"> Whistleblower Form</a>
-        | <a style="color: black;  font-weight: normal;" href="privacy.html">Privacy Policy</a> | <a
-          style="color: black;  font-weight: normal;" href="privacy-rec.html">Recruitment Privacy Policy</a></p>
-    </div>
+      <div>
+            <h3>MAKING THE 2025 SUMMIT HAPPEN</h3>
+            <ul class="flex-container wrap" style="align-items: center;">
+                  <li class="flex-item" style="width: 150px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG">
+                  <li class="flex-item" style="width: 150px;"><img src="images/collabs/DLA Piper.jpg">
 
-    <a href="#" class="scroll-up" style="padding-top: 30px; padding-bottom: 10px; margin-bottom: 0px;"></a>
+                  <li class="flex-item" style="width: 150px;"><img src="images/collabs/Legora (word logo).png">
+            </ul>
+            <ul
+                  style="display: flex; justify-content: center; flex-wrap: wrap; gap: 50px; padding: 20px 0; list-style: none; margin: 0;">
+                  <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
+                        <a href="https://ey.com" target="_blank">
+                              <img src="images/collabs/EY_Law_ Black.png" alt="EY Law"
+                                    style="max-width: 100%; height: auto; object-fit: contain;">
+                        </a>
+                  </li>
+                  <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
+                        <a href="https://www.almainsights.fi/" target="_blank">
+                              <img src="images/collabs/Alma Insights__black.png" alt="Alma"
+                                    style="max-width: 100%; height: auto; object-fit: contain;">
+                        </a>
+                  </li>
+            </ul>
+            <h3>In Collaboration With</h3>
+            <ul class="flex-container wrap" style="align-items: center;">
+                  <div class="padding-top-40 justify-center" style="background-color: white;">
+                        <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 
-  </div>
-  <div>
-    <p><strong>MAKING THE 2025 SUMMIT HAPPEN</strong></p>
-    <ul class="flex-container wrap" style="align-items: center;">
-      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG">
-      <li class="flex-item" style="width: 150px;"><img src="images/collabs/DLA Piper.jpg">
-
-      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Legora (word logo).png">
-    </ul>
-    <ul
-      style="display: flex; justify-content: center; flex-wrap: wrap; gap: 50px; padding: 20px 0; list-style: none; margin: 0;">
-      <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
-        <a href="https://ey.com" target="_blank">
-          <img src="images/collabs/EY_Law_ Black.png" alt="EY Law"
-            style="max-width: 100%; height: auto; object-fit: contain;">
-        </a>
-      </li>
-      <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
-        <a href="https://www.almainsights.fi/" target="_blank">
-          <img src="images/collabs/Alma Insights__black.png" alt="Alma"
-            style="max-width: 100%; height: auto; object-fit: contain;">
-        </a>
-      </li>
-    </ul>
-    <p><strong>In Collaboration With</strong></p>
-
-    <ul class="flex-container wrap" style="align-items: center;">
-
-      <div class="padding-top-40 justify-center" style="background-color: white;">
-        <h3>In co-operation with:</h3>
-        <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
-
-        <ul class="flex-container wrap">
-          <li class="flex-item" style="width: 100px"><a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img
-                src="images/collabs/clt.png"></a></li>
-          <!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
+                        <ul class="flex-container wrap">
+                              <li class="flex-item" style="width: 100px"><a href="https://www.copenhagenlegaltech.dk/"
+                                          target="_blank"><img src="images/collabs/clt.png"></a></li>
+                              <!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
                 src="images/collabs/aalto.png"></a></li>
           
           <li class="flex-item"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img
@@ -63,18 +48,19 @@
           <li class="flex-item" style="width: 300px"><a href="https://www.it-oikeus.org/" target="_blank"><img
                 src="images/collabs/it.png"></a></li>
                 -->
-          <li class="flex-item" style="width: 100px"><a href="https://elta.org/" target="_blank"><img
-                src="images/collabs/elta.png"></a></li>
-          <li class="flex-item"><a
-              href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
-              target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://legalhackers.org/" target="_blank"><img
-                src="images/collabs/lh.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.hiil.org/" target="_blank"><img
-                src="images/collabs/HiiL_Logo color tagline.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://juristiliitto.fi/" target="_blank"><img
-                src="images/collabs/Juristiliitto.png"></a></li>
-          <!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
+                              <li class="flex-item" style="width: 100px"><a href="https://elta.org/"
+                                          target="_blank"><img src="images/collabs/elta.png"></a></li>
+                              <li class="flex-item"><a
+                                          href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
+                                          target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://legalhackers.org/"
+                                          target="_blank"><img src="images/collabs/lh.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://www.hiil.org/"
+                                          target="_blank"><img src="images/collabs/HiiL_Logo color tagline.png"></a>
+                              </li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://juristiliitto.fi/"
+                                          target="_blank"><img src="images/collabs/Juristiliitto.png"></a></li>
+                              <!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
                 src="images/collabs/nu-law.png"></a></li>
           <li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
                 src="images/collabs/LITE-Lab.jpg"></a></li>
@@ -101,7 +87,7 @@
           <li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img
                 src="images/collabs/lancaster-logo-2.PNG"></a></li>-->
 
-          <!--	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img
+                              <!--	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img
                 src="images/collabs/logo-eLegal.png"></a></li>
           <li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img
                 src="images/collabs/Laurea.png"></a></li>
@@ -110,53 +96,56 @@
           <li class="flex-item" style="width: 200px;"><a
               href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html"
               target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>-->
-          <li class="flex-item" style="width: 180px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/"
-              target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
-          <!--<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img
+                              <li class="flex-item" style="width: 180px;"><a
+                                          href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank"><img
+                                                src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+                              <!--<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img
                 src="images/collabs/Bond-University.jpg"></a></li>
           <li class="flex-item" style="width: 250px;"><a
               href="https://oikeus.fi/karajaoikeudet/helsinginkarajaoikeus/en/index.html" target="_blank"><img
                 src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
           <li class="flex-item" style="width: 300px;"><a href="https://www.pelastakaalapset.fi/en/frontpage/"
               target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>-->
-          <li class="flex-item" style="width: 180px;"><a
-              href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
-                src="images/collabs/Domstolsverket.png"></a></li>
-          <!--<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/"
+                              <li class="flex-item" style="width: 180px;"><a
+                                          href="https://www.domstol.se/domstolsverket/other-languages/english/"
+                                          target="_blank"><img src="images/collabs/Domstolsverket.png"></a></li>
+                              <!--<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/"
               target="_blank"><img src="images/collabs/CLOB.png"></a></li>
           <li class="flex-item" style="width: 220px;"><a href="https://www.linkedin.com/company/neld-usp"
               target="_blank"><img src="images/collabs/NELD.png"></a></li>
           <li class="flex-item" style="width: 260px;"><a
               href="https://www.helsinki.fi/en/networks/helsinki-incubators" target="_blank"><img
                 src="images/collabs/Helsinki-Incubators.png"></a></li>-->
-          <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
-              target="_blank"><img src="images/collabs/TalTech.png"></a></li>
-          <!--<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img
+                              <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
+                                          target="_blank"><img src="images/collabs/TalTech.png"></a></li>
+                              <!--<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img
                 src="images/collabs/FGV-Direito-SP.png"></a></li>
           <li class="flex-item" style="width: 270px;"><a
               href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img
                 src="images/collabs/Erasmus_program.PNG"></a></li>-->
-          <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
-              target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
-                src="images/logos/Logo blue.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.utu.fi/en" target="_blank"><img
-                src="images/collabs/UTU_logo_EN_RGB.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.laurea.fi/en/" target=" _blank"><img
-                src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
-                src="images/collabs/VTT_Orange_Logo.png"></a></li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.uni-hamburg.de/en.html" target=" _blank"><img
-                src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
-          </li>
-          <li class="flex-item" style="width: 100px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
-              target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
-          </li>
-        </ul>
+                              <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
+                                          target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://chancerylaneproject.org/"
+                                          target="_blank"><img src="images/logos/Logo blue.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://www.utu.fi/en"
+                                          target="_blank"><img src="images/collabs/UTU_logo_EN_RGB.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://www.laurea.fi/en/"
+                                          target=" _blank"><img src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://www.vttresearch.com/en"
+                                          target=" _blank"><img src="images/collabs/VTT_Orange_Logo.png"></a></li>
+                              <li class="flex-item" style="width: 100px;"><a href="https://www.uni-hamburg.de/en.html"
+                                          target=" _blank"><img
+                                                src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
+                              </li>
+                              <li class="flex-item" style="width: 100px;"><a
+                                          href="https://www.helsinki.fi/en/networks/legal-tech-lab"
+                                          target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
+                              </li>
+                        </ul>
+                  </div>
+
+                  <!-- Content Main Section Ends -->
+
+
+
       </div>
-
-      <!-- Content Main Section Ends -->
-
-
-
-  </div>
