--- a/brainfactory.html
+++ b/brainfactory.html
@@ -505,7 +505,7 @@
                 <p><strong>Facilitators:</strong></p>
                 <ul>
                   <li>Antti Innanen, CEO and Founder, Dot. Legal Design</li>
-                  <li>Imperiale, Founder and Managing Director, Better Ipsum</li>
+                  <li>Marco Imperiale, Founder and Managing Director, Better Ipsum</li>
                   <li>Cat Moon, Law Professor and Founding Co-Director, Vanderbilt AI + Law Lab (VAILL), Vanderbilt Law
                     School</li>
                 </ul>
