--- a/tickets.html
+++ b/tickets.html
@@ -146,10 +146,13 @@
           <div class="column">
             <h4>How much does it cost to attend?</h4>
             <p>Completely free! But there is a no-show fee of EUR 50 (student tickets) EUR 150 (normal tickets)</p>
-            <h4>What about Brainfactory?</h4>
+            <h4>What about BrainFactory?</h4>
             <p>Our extremley popular workshops will return in a new format and take place on 10 September 2025. In order
               to register for a workshop, you need to have a valid LDS ticket. Registration for the workshops 10
-              September 2025 will open soon - stay tuned!</p>
+              September 2025 will open on 5 June - please visit our BrainFacotry page <a href="brainfactory.html"
+                style="color: #c30979;">here</a> to read more and register! For waitlist please email <a
+                href="mailto:brainfactory@legaldesignsummit.com"
+                style="color: black; text-decoration: underline;">brainfactory@legaldesignsummit.com</a></p>
             <h4>Can I get a ticket for 1 day only?</h4>
             <p> All tickets are for 2 days BUT you can share your ticket with someone else if you cannot participate on
               both days. However, the person acquiring the ticket is responsible for someone to show up on both days.
@@ -173,7 +176,9 @@
             </ul>
             </p>
             <h4>If tickets are sold out, can I register for a waiting list?</h4>
-            <p>Yes! There will be a wait-list for you to sign up through</p>
+            <p>Yes! There will be a wait-list for you to sign up through when tickets sell out. For BrainFactory please
+              email <a href="mailto:brainfactory@legaldesignsummit.com"
+                style="color: black; text-decoration: underline;">brainfactory@legaldesignsummit.com</a></p>
 
           </div>
         </div>
