--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<div class="blue-bar">
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
-					<p class="slogan-enhanced">11 - 12 September | Workshops 10 September @ HELSINKI, FINLAND</p>
+					<p class="slogan-enhanced">11 - 12 September | BrainFactory 10 September @ HELSINKI, FINLAND</p>
 					<br><br>
 					<p class="slogan-long">Welcome to the largest non-profit legal design event in the world.</p>
 				</div>
