update of logos

--- a/footer.html
+++ b/footer.html
@@ -102,7 +102,7 @@
       <div class="logo-grid">
             <img src="images/collabs/Helsingin-yliopisto-oikis.PNG" alt="Helsingin yliopisto"
                   style="height: 60px; object-fit: contain;">
-            <img src="images/collabs/-newcode.ai.png" alt="newcode.ai" style="height: 90px; object-fit: contain;">
+            <img src="images/collabs/-Newcode.ai.svg" alt="newcode.ai" style="height: 90px; object-fit: contain;">
             <img src="images/collabs/DLA Piper.jpg" alt="DLA Piper" style="height: 60px; object-fit: contain;">
             <img src="images/collabs/Legora (word logo).png" alt="Legora" style="height: 60px; object-fit: contain;">
       </div>
