--- a/program-thursday.html
+++ b/program-thursday.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="images/meta.png" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="images/favicon.png" />
   <link href="css/vendor/formstone/carousel.css" type="text/css" rel="stylesheet" media="all">
   <link href="css/vendor/formstone/lightbox.css" type="text/css" rel="stylesheet" media="all">
@@ -33,7 +33,7 @@
   <script type="text/javascript" src="scripts/vendor/formstone/lightbox.js"></script>
   <script type="text/javascript" src="scripts/vendor/formstone/viewer.js"></script>
   <script type="text/javascript" src="scripts/main.js"></script>
-  <script src="http://code,jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
   <script>
     $(function () {
@@ -63,23 +63,7 @@
     }
 
 
-
-
-    .dot_logo {
-      max-width: 15%;
-    }
-
-    .speaker h3 {
-      margin: 26px;
-    }
-
-    @media only screen and (max-width: 767px) {
-      .dot_logo {
-        max-width: 8rem;
-      }
-
-
-    }
+    @media only screen and (max-width: 767px) {}
   </style>
 
 
@@ -102,6 +86,7 @@
           <div class="block menu-main">
             <div class="content">
               <div class="menu-toggler">Menu<span class="icon"></span></div>
+
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
@@ -113,6 +98,7 @@
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
                 </ul>
+
               </div>
             </div>
           </div>
@@ -124,268 +110,17 @@
   <div class="wrapper why-attend" style="padding-bottom: 0px;">
     <div class="container">
       <div style="text-align: center;">
-
-        <h2>PROGRAM OF THE 2025 LEGAL DESIGN SUMMIT IS LOADING...</h2>
+        <h2>LEGAL DESIGN SUMMIT AGENDA</h2>
         <p style="font-size: 20px; padding-top: 40px;">
-          Stay tuned for updates - or email us with your best ideas!<br>
+          Program dropping soon - stay tuned for updates!<br>
           <a href="mailto:info@legaldesignsummit.com" target="_blank"
             style="color: #50cec1; text-decoration: underline;">
             Get in touch
           </a>
         </p>
-
       </div>
     </div>
   </div>
-
-
-
-  <div class="speaker">
-
-
-
-  </div>
-
-  <div style="padding: 60px 0; font-family: Arial, sans-serif;">
-    <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
-      <h2
-        style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
-        EXPLORE PREVIOUS YEARS TOPICS AND SPEAKERS
-      </h2>
-      <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
-
-      <h2
-        style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
-        LEGAL DESIGN SUMMIT 2023
-      </h2>
-      <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
-
-      <div style="text-align: center; max-width: 800px; margin: 0 auto 40px; line-height: 1.6; color: #555;">
-        <p>Held at the Great Hall of the University of Helsinki, Aleksanterinkatu 5</p>
-      </div>
-
-      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
-        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
-          I. BEAUTIFUL & BETTER DOCUMENTS & VISUALISING INFORMATION
-        </h3>
-      </div>
-
-      <div style="margin: 30px 0;">
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Marco Imperiale</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">The Beauty in Legal Design - from Leonardo to 21st Century
-            Human Centrism</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Stefania Passera</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Contract Design Mythbusting</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Dan Riley</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Enhancing Forensic Accident Investigation with Immersive
-            Visualization: A Case Study</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Mel Flanagan</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Visualizing Laws for Clarity, Connection, and
-            Collaboration</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Kanan Dhru</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">The Role of the Public Sector in Growing the Legal Design
-            movement: Lawtoons project in India</p>
-        </div>
-      </div>
-
-      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
-        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
-          II. THE CASE FOR LEGAL DESIGN
-        </h3>
-      </div>
-
-      <div style="margin: 30px 0;">
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Erika Pagano, Callum Brown and Glen Byrne</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">No Short Change: Making the Business Case for Legal Design
-          </p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Astrid Kohlmeier (lead), Dorra Harrar, Laura
-            Hartmann, Karol Valencia</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Innovative Thinking and Cultural Diversity of Legal Design
-          </p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Marie Potel-Saville</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Fairness by Design: How Might We End Deception and
-            Manipulation Online?</p>
-        </div>
-      </div>
-
-      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
-        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
-          III. LEGAL DESIGN AS A NEW MINDSET IN THE FACE OF MODERN TOOLS
-        </h3>
-      </div>
-
-      <div style="margin: 30px 0;">
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Riikka Koulu</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Law as Design: Usability and Fundamental Rights in Digital
-            Public Administration</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Geoffrey Delcroix</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Game Changer: How Design Became the Cornerstone of Ubisoft
-            Legal Team Transformation</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Natalie Byrom</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Justice Data Governance for People Centered Justice</p>
-        </div>
-      </div>
-
-      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
-        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
-          IV. LEGAL DESIGN, JUSTICE AND INCLUSIVITY
-        </h3>
-      </div>
-
-      <div style="margin: 30px 0;">
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Hallie Jay Pope</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Legal information designer, educator, and cartoonist</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Ebru Metin</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Early Stage Researcher at Tallinn University of
-            Technology, Founder at Legal Design Turkey</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Joaquin Santuber</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Postdoctoral researcher on designing for posthuman
-            legalities—human-nature-machine relations</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Emily MacLoud</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Senior Design Strategist at Portable</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Mariana Salgado</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">For the last three years, worked as Service designer at
-            the Finnish Ministery of the Interior</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Angelica Flechas</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Founder of HÁPTICA, a service design consultancy agency
-          </p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Zainab Malik</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Programme Manager for the Justice Innovation Labs at HiiL
-          </p>
-        </div>
-      </div>
-
-      <div style="background-color: #aeede8; padding: 15px; margin: 30px 0; text-align: center;">
-        <h3 style="color: #c30979; font-size: 24px; margin: 0; text-transform: uppercase; font-weight: 700;">
-          V. THE FUTURE OF LEGAL DESIGN
-        </h3>
-      </div>
-
-      <div style="margin: 30px 0;">
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Lina Krawietz</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Lawyer, UX-/UI-Designer and HPI-certified Design Thinker
-          </p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Alisha Andert</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">LL.M., Co-founder of the "This is Legal Design"
-            (innovation consultancy)</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Michael Doherty</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Professor of Law, and Associate Head of the Law School, at
-            Lancaster University</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Dan Jackson</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Director of NuLawLab at Northeastern University</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Kirsti Lonka</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Professor of Educational Psychology at University of
-            Helsinki</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Aleida Luján Pinelo</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Postdoctoral researcher at the Faculty of Law, University
-            of Turku</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Andrea Botero</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Associate Professor (New Frontiers of Design) at the
-            School of Arts, Design and Architecture of Aalto University</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Ilona Logvinova</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Global Head of Innovation for McKinsey Legal</p>
-        </div>
-
-        <div style="margin-bottom: 25px;">
-          <h3 style="color: #333; font-size: 20px; margin-bottom: 5px;">Cat Moon</h3>
-          <p style="color: #555; font-size: 18px; margin: 0;">Director of Innovation Design at Vanderbilt Law School and
-            #MakeLawBetter Provocateur</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
-
-
-
-  </div>
-
-
-
-  </div>
-
-  <!--
-                <div class="flex-item">
-                <div class="image"><a><img src="images/speakers/2023/"></a></div>
-                <h3>name</h3>
-                <p>Title<span class="read-more-text">. story</span></p>
-                <span class="read-more-btn">Read More...</span>
-              </div>
- -->
-
-  </div>
-  </div>
-
-
-
   <div class="wrapper actions" style="padding-bottom: 0px;">
 
     <!-- Container Section Begins -->
@@ -417,6 +152,7 @@
                   class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
                 <a href="https://www.instagram.com/legaldesignsummit/"
                   class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
+
               </div>
             </div>
           </div>
