--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -105,12 +105,12 @@
     <div style="max-width: 1200px; margin: 0 auto; padding: 0 20px;">
       <h2
         style="text-align: center; font-size: 32px; color: #333; margin-bottom: 20px; font-weight: 700; text-transform: uppercase;">
-        The call for speakers is now closed - thank you for all submissions!</h2>
-      <!-- Replace these two divs with one thicker bar -->
+        Meet this years's Speakers</h2>
+
       <div style="height: 8px; width: 220px; background-color: #7DDFD3; margin: 0 auto 40px;"></div>
 
       <div style="text-align: center; max-width: 800px; margin: 0 auto 60px; line-height: 1.6; color: #555;">
-        <p>Speakers for the 2025 Summit will drop soon - stay tuned!</p>
+        <p>Shaping the next chapter in legal design</p>
       </div>
     </div>
 
