session detail background update

--- a/program.html
+++ b/program.html
@@ -207,6 +207,10 @@
       color: #666;
       font-size: 14px;
       line-height: 1.6;
+      background-color: rgba(174, 236, 233, 0.5);
+
+    }
+
     }
 
     .keynote-session {
